[package]
name = "simple_asn1"
version = "0.4.0"
authors = ["Adam Wick <awick@uhsure.com>"]
description = "A simple DER/ASN.1 encoding/decoding library."
categories = ["encoding"]
keywords = ["ASN1","encoding","DER"]
license-file = "LICENSE"
repository = "https://github.com/acw/simple_asn1"

[dependencies]
chrono     = "^0.4.0"
num-bigint = { version = "^0.2.0", features = ["serde"] }
num-traits = "^0.2.0"
serde = "^1"
serde_derive = "^1"

[dev-dependencies]
quickcheck = "^0.7.1"
rand = "0.5.5"
